--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,6 +1,6 @@
 variables:
   # Version of clang host compiler.
-  CLANG_VERSION: 9.0.0
+  CLANG_VERSION: 10.0.0
   LLVM_PROJECTS_TO_ENABLE: compiler-rt;lld;mlir
   LLVM_TARGETS_TO_BUILD: AArch64;ARM;Mips;MSP430;NVPTX;PowerPC;RISCV;WebAssembly;X86
   LLVM_EXPERIMENTAL_TARGETS_TO_BUILD: AVR
@@ -72,24 +72,23 @@ jobs:
         set -ex
         cd ..
         export DEBIAN_FRONTEND=noninteractive
+        wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
+        CLANG_MAJOR=${CLANG_VERSION%%\.*}
+        sudo add-apt-repository "deb http://apt.llvm.org/xenial/ llvm-toolchain-xenial-$CLANG_MAJOR main"
         sudo apt-get -q update
         sudo apt-get -yq install \
-          git-core cmake ninja-build binutils-dev python p7zip-full
-        # Download & extract clang
-        curl -L -o clang.tar.xz http://releases.llvm.org/$CLANG_VERSION/clang+llvm-$CLANG_VERSION-x86_64-linux-gnu-ubuntu-16.04.tar.xz
-        mkdir clang
-        tar -xf clang.tar.xz --strip 1 -C clang
+          git-core cmake ninja-build clang-$CLANG_MAJOR binutils-dev python p7zip-full
         # Set CC and CXX to clang[++] for future steps
         set +x
-        echo "##vso[task.setvariable variable=CC]$PWD/clang/bin/clang"
-        echo "##vso[task.setvariable variable=CXX]$PWD/clang/bin/clang++"
+        echo "##vso[task.setvariable variable=CC]/usr/bin/clang-$CLANG_MAJOR"
+        echo "##vso[task.setvariable variable=CXX]/usr/bin/clang++-$CLANG_MAJOR"
       displayName: Install prerequisites
     - template: .azure-pipelines/posix.yml
 
 - job: macOS
   timeoutInMinutes: 180
   pool:
-    vmImage: 'macOS-10.14'
+    vmImage: 'macOS-10.15'
   variables:
     CI_OS: osx
     ARCH: x86_64
@@ -109,7 +108,7 @@ jobs:
         set -ex
         cd ..
         # Download & extract Ninja
-        curl -L -o ninja-mac.zip https://github.com/ninja-build/ninja/releases/download/v1.9.0/ninja-mac.zip
+        curl -L -o ninja-mac.zip https://github.com/ninja-build/ninja/releases/download/v1.10.0/ninja-mac.zip
         mkdir ninja
         tar -xf ninja-mac.zip -C ninja
       displayName: Install prerequisites
@@ -125,6 +124,7 @@ jobs:
     LLVM_TARGETS_TO_BUILD: AArch64;ARM;WebAssembly;X86
     LLVM_EXPERIMENTAL_TARGETS_TO_BUILD: ''
     LLVM_ENABLE_ASSERTIONS: OFF
+    ANDROID_NDK_VERSION: r21d
   strategy:
     matrix:
       armv7a:
@@ -164,12 +164,12 @@ jobs:
         set -ex
         cd ..
         # Download & extract Android NDK
-        curl -OL https://dl.google.com/android/repository/android-ndk-r21-linux-x86_64.zip
-        unzip android-ndk-r21-linux-x86_64.zip > /dev/null
-        rm android-ndk-r21-linux-x86_64.zip
+        curl -OL https://dl.google.com/android/repository/android-ndk-$ANDROID_NDK_VERSION-linux-x86_64.zip
+        unzip android-ndk-$ANDROID_NDK_VERSION-linux-x86_64.zip > /dev/null
+        rm android-ndk-$ANDROID_NDK_VERSION-linux-x86_64.zip
         # The NDK toolchain file enforces `-g` as base C[XX] flag - remove it to
         # *significantly* reduce executable sizes
-        TOOLCHAIN_FILE=$PWD/android-ndk-r21/build/cmake/android.toolchain.cmake
+        TOOLCHAIN_FILE=$PWD/android-ndk-$ANDROID_NDK_VERSION/build/cmake/android.toolchain.cmake
         sed -i 's|^  -g$||' $TOOLCHAIN_FILE
         # Set EXTRA_CMAKE_FLAGS_ANDROID for future steps
         set +x
